--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
-<button class="bg-red-500 rounded-lg p-2 m-4 text-white font-bold">respetuosamente te puede co mer </button>
+<app-log-in></app-log-in>
