--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -1,1 +1,27 @@
-<p>log-in works!</p>
+<div class="font-sans font-medium min-w-screen min-h-screen bg-gray-200 flex flex-col md:flex-row ">
+  <div class="md:float-left h-1/2 md:min-h-screen md:w-1/2 bg-gradient-to-b	from-slate-100 to-stone-100">
+    <div class="login-form flex flex-col justify-center items-center	gap-y-8	 min-h-screen	">
+      <h1 class="text-2xl md:text-3xl font-bold mb-5">Log In to your account</h1>
+      <div class="md:w-2/5 ">
+        <p class="font-bold mb-2">E-mail</p>
+        <input type="text" class="w-full  p-2 py-1 ... rounded-lg shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 	...">
+      </div>
+      <div class=" md:w-2/5 ">
+        <p class="font-bold mb-2">Password</p>
+        <input type="password" class="w-full  p-2 py-1 ... rounded-lg shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 	...">
+      </div>
+      <div class="md:w-2/5 flex flex-col items-center w-full">
+        <div  class="md:flex-row md:w-full">
+          <button routerLink="sign-up" class="bg-black font text-white md:w-2/5 mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg shadow-slate-900/40 font-bold hover:scale-105 ease-in-out duration-300">Sign up</button>
+          <button class="bg-sky-500 md:w-2/5 md:float-right mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg font-bold shadow-sky-500/40 hover:scale-105 ease-in-out duration-300">Log-in</button>
+        </div>
+        <p class="py-5 hover:underline decoration-2 ..."><a routerLink="sign-up"> I forgot my password...</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="md:float-right h-1/2 md:min-h-screen md:w-1/2  bg-[url('https://www.altonivel.com.mx/wp-content/uploads/2018/02/sat.jpg')]">
+  <div class="min-h-screen w-full bg-black/50 grid place-content-center">
+    <h1 class="text-white text-4xl font-bold m">Easy-Biller</h1>
+  </div>
+  </div>
+</div>
