agregar clientes listo

--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -1,8 +1,8 @@
 <div class="flex">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
-        <p class="m-2 ml-5 text-lg font-bold">Clientes</p>
+        <p class="m-2 ml-5 text-lg font-bold">Productos</p>
         <app-search-bar></app-search-bar>
-        <app-client-table></app-client-table>
+        <app-product-table></app-product-table>
     </div>
 </div>
