--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -7,11 +7,10 @@
   
       </li>
       <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        <i class="fa-solid fa-users"></i>
+       <a routerLink=""><i class="fa-solid fa-users"></i></a> 
       </li>
       <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        <i class="fa-solid fa-box-open"></i>
-  
+        <a routerLink="product-page"><i class="fa-solid fa-box-open"></i></a>
       </li>
       <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
             <i class="fa-solid fa-print"></i>
