--- a/src/app/pages/add-client-page/add-client-page.component.html
+++ b/src/app/pages/add-client-page/add-client-page.component.html
@@ -72,7 +72,12 @@
 
             <div class="flex">
                 <div class="">
-                    <button class=" mt-3 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Agregar cliente</button>
+                    <a routerLink="">
+                    <button class=" mt-3 bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Volver</button>
+                    </a>
+                    <a routerLink="">
+                    <button class=" ml-3 mt-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Agregar cliente</button>
+                    </a>
                 </div>
             </div>
 
