--- a/src/app/pages/add-product-page/add-product-page.component.html
+++ b/src/app/pages/add-product-page/add-product-page.component.html
@@ -1,1 +1,122 @@
-<p>add-product-page works!</p>
+<div class="flex">
+    <app-side-nav></app-side-nav>
+    <div class="flex flex-col w-full">
+        <p class="m-2 ml-5 text-lg font-bold">Productos <span> > </span> Agregar</p>
+        <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
+            
+                <div class="flex justify-start">
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="nombre">Nombre del producto: </label>
+                    <br>
+                    <input class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg" type="text" id="nombre" name="nombre" placeholder="Nombre del produto"
+                     [(ngModel)]="nombreORazonSocial">
+                </div>
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="tipoProducto">Tipo de producto </label>
+                    <br>
+                    <select id="tipoProducto"  class="w-72 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg">
+                        <option selected>Seleccione el tipo de producto</option>
+                        <option value="Producto del hogar">Producto del hogar</option>
+                        <option value="Servicio">Servicio</option>
+                    </select>
+    
+                </div>
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="id">Id del producto: </label>
+                    <br>
+                    <input class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg" type="number" id="id" name="id" placeholder="P1001"
+                     [(ngModel)]="idDelProducto">
+                </div>
+            </div>
+            <div class="flex">
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="precioVenta">Precio de venta: </label>
+                    <br>
+                    <input class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg" type="number" id="precioVenta" name="precioVenta" placeholder="2,600.00"
+                     [(ngModel)]="precioDeVenta">
+                </div>
+
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="precioVenta">Precio de compra: </label>
+                    <br>
+                    <input class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg" type="number" id="precioCompra" name="precioCompra" placeholder="2,048.77"
+                     [(ngModel)]="precioDeCompra">
+                </div>
+
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="ganancia">Ganancia: </label>
+                    <br>
+                    <input class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg" type="number" id="ganancia" name="ganancia" placeholder="551.23"
+                     [(ngModel)]="Ganancia">
+                </div>
+                
+            </div>
+            <div class="flex">
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="descripcionProducto">Descripcion del producto:  </label>
+                    <br>
+                   <textarea type="text" id="descripcionProducto" class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg" id="descripcionProducto" name="descripcionProduct" [(ngModel)]="DescripcionDelProducto">
+                </div>
+
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="nombreProveedor">Nombre del proveedor: </label>
+                    <br>
+                    <input class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg" type="text" id="nombreProveedor" name="nombreProveedor" placeholder="Nombre del proveedor" [(ngModel)]="nombreDelProveedor">
+                </div>
+
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="telefono">Telefono: </label>
+                    <br>
+                    <input type="number" id="telefono" name="telefono" placeholder="809-589-9873" class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg"
+                    [(ngModel)]="telefono">
+                </div>
+
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="correo">Correo:  </label>
+                    <br>
+                    <input type="mail" id="correo" name="correo" placeholder="cliente@correo.com" class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg"
+                    [(ngModel)]="correoClientes">
+    
+                </div>
+                
+                
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="celular">Celular:  </label>
+                    <br>
+                    <input type="number" id="telefono" name="telefono" placeholder="849-837-9101" class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg"
+                    [(ngModel)]="celular">
+                </div>
+            </div>
+            <div class="flex">
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="direccion">Direccion:  </label>
+                    <br>
+                    <textarea id="direccion" class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg"
+                    [(ngModel)]="direccion"></textarea>
+    
+                </div>
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="comentario">Comentario:  </label>
+                    <br>
+                    <textarea id="comentario" class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg"
+                    [(ngModel)]="comentarios"></textarea>
+                </div>
+            </div>
+
+            <div class="flex">
+                <div class="product-page">
+                    <a routerLink="">
+                    <button class=" mt-3 bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Volver</button>
+                    </a>
+                    <a routerLink="">
+                    <button class=" ml-3 mt-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Agregar producto</button>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+        
+        
+    </div>
+    
+</div>
