seccion factura listo

--- a/src/app/pages/client-page/client-page.component.html
+++ b/src/app/pages/client-page/client-page.component.html
@@ -2,7 +2,9 @@
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
         <p class="m-2 ml-5 text-lg font-bold">Clientes</p>
-        <app-search-bar></app-search-bar>
+        <app-search-bar
+        [direccion]="ruta"
+        ></app-search-bar>
         <app-client-table></app-client-table>
     </div>
 </div>
