--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -10,10 +10,10 @@
        <a routerLink=""><i class="fa-solid fa-users"></i></a> 
       </li>
       <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        <a routerLink="product-page"><i class="fa-solid fa-box-open"></i></a>
+        <a routerLink="../product-page"><i class="fa-solid fa-box-open"></i></a>
       </li>
       <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-            <i class="fa-solid fa-print"></i>
+        <a routerLink="../bill-page"><i class="fa-solid fa-file-invoice-dollar"></i></a>
   
       </li>
       <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
@@ -21,7 +21,7 @@
   
       </li>
       <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        <i class="fa-solid fa-gears"></i>
+        <i class="fa-solid fa-gear"></i>
       </li>
     </ul>
   
