--- a/src/app/pages/add-product-page/add-product-page.component.html
+++ b/src/app/pages/add-product-page/add-product-page.component.html
@@ -105,10 +105,10 @@
 
             <div class="flex">
                 <div class="product-page">
-                    <a routerLink="">
+                    <a routerLink="../product-page">
                     <button class=" mt-3 bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Volver</button>
                     </a>
-                    <a routerLink="">
+                    <a routerLink="../product-page">
                     <button class=" ml-3 mt-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Agregar producto</button>
                     </a>
                 </div>
