--- a/src/app/pages/bill-page/bill-page.component.html
+++ b/src/app/pages/bill-page/bill-page.component.html
@@ -1,10 +1,10 @@
 <div class="flex">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
-        <p class="m-2 ml-5 text-lg font-bold">Productos</p>
+        <p class="m-2 ml-5 text-lg font-bold">Facturas</p>
         <app-search-bar
         [direccion]="ruta"
         ></app-search-bar>
-        <app-product-table></app-product-table>
+        <app-bill-table></app-bill-table>
     </div>
 </div>
