mejore pila de vaina ahora voy a trabajar con la logica

--- a/src/app/components/c-signup/c-signup.component.html
+++ b/src/app/components/c-signup/c-signup.component.html
@@ -18,7 +18,7 @@
           <div  class="md:flex-row md:w-full">
             <a routerLink="/sign-up"> <button class="bg-black font text-white md:w-2/5 mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg shadow-slate-900/40 font-bold hover:scale-105 ease-in-out duration-300">
               Sign up</button></a>
-             <a routerLink="/log-in"><button class="bg-sky-500 md:w-2/5 md:float-right mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg font-bold shadow-sky-500/40 hover:scale-105 ease-in-out duration-300">  Log In</button></a>
+             <a routerLink=""><button class="bg-sky-500 md:w-2/5 md:float-right mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg font-bold shadow-sky-500/40 hover:scale-105 ease-in-out duration-300">  Log In</button></a>
           </div>
           <p class="py-5">I forgot my password...</p>
         </div>
