--- a/src/app/components/client-table/client-table.component.html
+++ b/src/app/components/client-table/client-table.component.html
@@ -1,5 +1,5 @@
 <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
-    asdasd
+    Datos de los clientes
     <table class="w-full my-3" style="text-align:justify;">
         <thead>
             <tr class="text-xs">
