--- a/src/app/pages/add-client-page/add-client-page.component.html
+++ b/src/app/pages/add-client-page/add-client-page.component.html
@@ -1,6 +1,6 @@
 <div class="flex">
     <app-side-nav></app-side-nav>
-    <div class="flex flex-col w-full">
+    <div class="flex flex-col w-full text-xs">
         <p class="m-2 ml-5 text-lg font-bold">Clientes <span> > </span> Agregar</p>
     
         <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
@@ -13,7 +13,7 @@
                      [(ngModel)]="nombreORazonSocial">
                 </div>
             </div>
-            <div class="flex">
+            <div class="flex justify-start">
                 <div class="mt-3">
                     <label class="font-bold mb-2" for="tipoDocumento">Tipo de documento </label>
                     <br>
@@ -32,7 +32,7 @@
                     " [(ngModel)]="numeroDeDocumento">
                 </div>
             </div>
-            <div class="flex">
+            <div class="flex justify-start">
                 <div class="mt-3">
                     <label class="font-bold mb-2" for="correo">Correo:  </label>
                     <br>
@@ -54,7 +54,7 @@
                     [(ngModel)]="celular">
                 </div>
             </div>
-            <div class="flex">
+            <div class="flex justify-start">
                 <div class="mt-3">
                     <label class="font-bold mb-2" for="direccion">Direccion:  </label>
                     <br>
