--- a/src/app/pages/add-bill-page/add-bill-page.component.html
+++ b/src/app/pages/add-bill-page/add-bill-page.component.html
@@ -1,63 +1,134 @@
 <div class="flex">
     <app-side-nav></app-side-nav>
-    <div class="flex flex-col w-full">
+    <div class="flex flex-col w-full text-xs">
         <p class="m-2 ml-5 text-lg font-bold">Facturas <span> > </span> Agregar</p>
     
         <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
             
-                <div class="flex justify-start">
+            <div class="flex justify-between">
                 <div class="mt-3">
                     <label class="font-bold mb-2" for="clienteSelect">Cliente</label>
                     <br>
-                    <select id="clienteSelect"  class="w-72 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg">
+                    <select id="clienteSelect"  class="flex w-52 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                         <option selected>Seleccione el cliente</option>
                         <option value="Maria pineda">Maria pineda</option>
                         <option value="Juan Carlos Perez">Juan Carlos Perez</option>
                     </select>
-                    <br>
+                </div>
+                <div class="mt-3">
                     <label class="font-bold mb-2" for="comprobante">Comprobante fiscal </label>
                     <br>
-                    <select id="comprobante" name="comprobante"  class="w-72 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg">
+                    <select id="comprobante" name="comprobante"  class="w-56 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                         <option selected>Seleccione el comprobante fiscal</option>
                         <option value="Comprobante fiscal">Comprobante fiscal</option>
                         <option value="NPI">NPI</option>
                     </select>
-                    <br>
+                </div>
+                <div class="mt-3">
                     <label class="font-bold mb-2" for="terminoDePago">Termino de pago </label>
                     <br>
-                    <select id="terminoDePago" name="terminoDePago"  class="w-72 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg">
+                    <select id="terminoDePago" name="terminoDePago"  class="w-52 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                         <option selected>Seleccione el termino de pago</option>
                         <option value="Al contado">Al contado</option>
                         <option value="Credito">Credito</option>
                     </select>
-                    <br>
+                </div>
+                <div class="mt-3">
                     <label class="font-bold mb-2" for="estadoDePago">Estado de pago </label>
                     <br>
-                    <select id="estadoDePago"  class="w-72 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg">
+                    <select id="estadoDePago"  class="w-52 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                         <option selected>Seleccione el estado de pago</option>
                         <option value="Saldado">Saldado</option>
                         <option value="Sin saldar">Sin saldar</option>
                     </select>
                 </div>
-            </div>
-            <div class="flex">
                 <div class="mt-3">
                     <label class="font-bold mb-2" for="tipoDocumento">Tipo de documento </label>
                     <br>
-                    <select id="tipoDocumento"  class="w-72 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg">
+                    <select id="tipoDocumento"  class="w-56 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                         <option selected>Seleccione el tipo de documento</option>
                         <option value="Comprobante fiscal">Comprobante fiscal</option>
                         <option value="NPI">NPI</option>
                     </select>
-    
                 </div>
-    
-               
             </div>
             <div class="flex">
-
+                <div class="bg-[#0EA5E9] w-full h-0.5 rounded-full my-2"></div>
+                
+                </div>
             <div class="flex">
-             
+                <div class="mt-3">
+                    <label class="font-bold mb-2" for="productSelect">Producto</label>
+                    <br>
+                    <select id="productSelect"  name="productSelect" class="flex w-52 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
+                        <option selected>Seleccione el producto</option>
+                        <option value="Producto A">Producto A</option>
+                        <option value="Producto B">Producto B</option>
+                    </select>
+                </div>
+                <div class="mt-3 ml-2">
+                    <label class="font-bold mb-2" for="cant">Cantidad </label>
+                    <br>
+                    <input type="number" id="telefono" name="telefono" placeholder="809-589-9873" class="w-16 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg"
+                    [(ngModel)]="cant">
+                </div>
+                <div class="mt-3">
+                    <button class=" flex h-8 w-8 p-2 m-4 bg-lime-500 rounded-full justify-center items-center hover:scale-105 ease-in-out duration-300">
+                        <p class="text-white font-bold text-md "><i class="fa-solid fa-plus"></i></p>
+                    </button>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="bg-[#0EA5E9] w-full h-0.5 rounded-full my-2"></div>
+            </div>
+            <div class="flex">
+                    <table class="w-full my-3" style="text-align:justify;">
+                        <thead>
+                            <tr class="text-xs">
+                                <th>Articulo</th>
+                                <th>Precio unitario</th>
+                                <th>Cantidad</th>
+                                <th>Total</th>
+                            </tr>
+                        </thead>     
+                        
+                        <tbody>
+                            <tr class="text-xs">
+                               
+                                <td class="py-1">Producto A</td>
+                                <td class="py-1">0.00</td>
+                                <td class="py-1">0</td>
+                                <td class="py-1">0</td>
+                            </tr>
+                        </tbody>
+                    </table>
+            </div>
+            <div class="flex">
+                <div class="bg-[#0EA5E9] w-full h-0.5 rounded-full my-2"></div>
+            </div>
+            <div class="flex">
+                    <table class="w-full my-3" style="text-align:justify;">
+                        <thead>
+                            <tr class="text-xs">
+                                <th>Sub total</th>
+                                <th>Descuento</th>
+                                <th>Impuesto</th>
+                                <th>Gran Total</th>
+                            </tr>
+                        </thead>     
+                        
+                        <tbody>
+                            <tr class="text-xs">
+                               
+                                <td class="py-1">0.00</td>
+                                <td class="py-1">0.00</td>
+                                <td class="py-1">0.00</td>
+                                <td class="py-1">0.00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+            </div>
+            
             <div class="flex">
                 <div class="">
                     <a routerLink="../bill-page">
@@ -68,10 +139,6 @@
                     </a>
                 </div>
             </div>
-
         </div>
-        
-        
     </div>
-    
 </div>
