--- a/src/app/pages/add-product-page/add-product-page.component.html
+++ b/src/app/pages/add-product-page/add-product-page.component.html
@@ -1,6 +1,6 @@
 <div class="flex">
     <app-side-nav></app-side-nav>
-    <div class="flex flex-col w-full">
+    <div class="flex flex-col w-full text-xs">
         <p class="m-2 ml-5 text-lg font-bold">Productos <span> > </span> Agregar</p>
         <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
             
