--- a/src/app/components/client-table/client-table.component.html
+++ b/src/app/components/client-table/client-table.component.html
@@ -13,16 +13,15 @@
         
         <tbody>
             <td colspan="5"><div class="bg-[#0EA5E9] w-full h-0.5 rounded-full my-2"></div></td>
-            <tr class="text-xs" *ngFor="let user of users | paginate:{itemsPerPage: 6, currentPage: p, totalItems: total}">
+            <tr class="text-xs" *ngFor="let cliente of clientes">
                
-                <td class="py-1">{{user.id }}</td>
-                <td class="py-1">{{ user.first_name }}</td>
-                <td class="py-1">{{ user.last_name }}</td>
-                <td class="py-1">{{ user.email }}</td>
+                <td class="py-1">{{ cliente.nombreORazonSocial }}</td>
+                <td class="py-1">{{ cliente.numeroDeDocumento }}</td>
+                <td class="py-1">{{ cliente.celular }}</td>
+                <td class="py-1">{{ cliente.telefono }}</td>
                 <td class="py-1"><i class="fa-solid fa-ellipsis-vertical hover:scale-105 ease-in-out duration-300 cursor-pointer"></i></td>
             </tr>
 
         </tbody>
     </table>
-    <pagination-controls class="text-xs" (pageChange)="pageChangeEvent($event)"></pagination-controls>
 </div>
