--- a/src/app/pages/add-client-page/add-client-page.component.html
+++ b/src/app/pages/add-client-page/add-client-page.component.html
@@ -4,7 +4,7 @@
         <p class="m-2 ml-5 text-lg font-bold">Clientes <span> > </span> Agregar</p>
     
         <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
-            
+            <form>
                 <div class="flex justify-start">
                 <div class="mt-3">
                     <label class="font-bold mb-2" for="nombre">Nombre o razon social: </label>
@@ -61,7 +61,7 @@
                     <textarea id="direccion" class="w-64 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-4 py-2 m-3 ... rounded-lg"
                     [(ngModel)]="direccion"></textarea>
     
-                </div>
+                </div> 
                 <div class="mt-3">
                     <label class="font-bold mb-2" for="comentario">Comentario:  </label>
                     <br>
@@ -75,11 +75,12 @@
                     <a routerLink="">
                     <button class=" mt-3 bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Volver</button>
                     </a>
-                    <a routerLink="">
-                    <button class=" ml-3 mt-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Agregar cliente</button>
-                    </a>
+                    
+                    <button type="submit" class=" ml-3 mt-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" (click)="onClienteAgregado()">Agregar cliente</button>
+                    
                 </div>
             </div>
+        </form>
 
         </div>
         
