--- a/src/app/components/side-nav/side-nav.component.scss
+++ b/src/app/components/side-nav/side-nav.component.scss
@@ -15,4 +15,11 @@
       }
     }
   }
+  .menu-lateral {
+    background: var(--white);
+    box-shadow: 5px 0 1rem rgb(0 0 0 / 3%);
+    z-index: 2;
+    width: 8rem;
+    transition: all .4s ease;
+}
   
