--- a/src/app/pages/add-product-page/add-product-page.component.html
+++ b/src/app/pages/add-product-page/add-product-page.component.html
@@ -4,6 +4,14 @@
         <p class="m-2 ml-5 text-lg font-bold">Productos <span> > </span> Agregar</p>
         <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
             
+            <div class="flex justify-start">
+                <div class="mt-3">
+                    <input (change)="capturarImgProducto($event)" type="file">
+                </div>
+                <div class="mt-3">
+                   <img src="">
+                </div>
+            </div>
                 <div class="flex justify-start">
                 <div class="mt-3">
                     <label class="font-bold mb-2" for="nombre">Nombre del producto: </label>
