Integracion con german completada

--- a/src/app/components/client-table/client-table.component.html
+++ b/src/app/components/client-table/client-table.component.html
@@ -1,4 +1,4 @@
-<div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
+<div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-lime-600/30 rounded-lg relative">
     Datos de los clientes
     <table class="w-full my-3" style="text-align:justify;">
         <thead>
@@ -12,7 +12,7 @@
         </thead>     
         
         <tbody>
-            <td colspan="5"><div class="bg-[#0EA5E9] w-full h-0.5 rounded-full my-2"></div></td>
+            <td colspan="5"><div class="bg-lime-600 w-full h-0.5 rounded-full my-2"></div></td>
             <tr class="text-xs" *ngFor="let cliente of clientes">
                
                 <td class="py-1">{{ cliente.nombreORazonSocial }}</td>
