--- a/src/app/pages/client-page/client-page.component.html
+++ b/src/app/pages/client-page/client-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex">
+<div class="flex containeres">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
         <p class="m-2 ml-5 text-lg font-bold">Clientes</p>
