--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center h-12  mx-5 bg-[#0EA5E9] shadow-lg rounded-lg">
+<div class="flex justify-between items-center h-12  mx-5 bg-lime-600 shadow-lg rounded-lg relative">
     <!--Boton agregar-->
     <a [routerLink]="direccion">
     <button class="bg-white shadow-md rounded-lg py-2 px-6 m-3 h-8 w-32 hover:scale-105 ease-in-out duration-300 flex items-center justify-between">
