--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,70 +1,66 @@
-<div class=" min-h-screen w-36 bg-teal-50 sidebar">
-    <ul class="grid grid-rows-6  p-2 gap-5 place-items-start text-xl " >
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 h-18 p-3 hover:scale-105 ease-in-out duration-300">
-        <button>
-          <i class="fa-solid fa-bars" ></i>
-        </button>
-      </li>
-      <!--DashBoard-->
-      <a routerLink="../dashboard">
-        <li class="flex flex-col items-center rounded-md p-4 hover:scale-105 ease-in-out duration-300 w-full">
-          <div class="flex flex-row items-center justify-center border-4">
-          <img class="h-6" src="../../../assets/img/bar-chart.png">
-          <p  class="text-lg px-4"> DashBoard</p>
-        </div>
-        </li>
-        </a>
-      <!--Facturas-->
-      <a routerLink="../bill-page">
-        <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-          <i class="fa-solid fa-file-invoice-dollar"></i>
-        </li>
-        </a>
-      <!--Clientes-->
-      <a routerLink="">
-        <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-         <i class="fa-solid fa-users"></i>    
-        </li>
-        </a>
-      <!--Productos-->
-      <a routerLink="../product-page">
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        <i class="fa-solid fa-box-open"></i>
-      </li>
-      </a>
-      <!--More options-->
-    <a routerLink="../more-opt-page">
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        <i class="fa-solid fa-ellipsis"></i>
-      </li>
+<div class="cursor-pointer	 min-h-screen w-44 object-contain space-y-20 bg-white flex flex-col text-slate-700 drop-shadow-lg " >
+
+    <a routerLink="">
+    <div class="logo w-full h-1/4  p-3 flex space-x-4 drop-shadow-xl">
+      <img src="../../../assets/img/invoice.png" class="w-12 h-12" alt="">  
+      <div class="flex flex-col text-3xl  font-light  h-full">     
+        <span class="border-l-2  border-solid border-slate-700 px-1 ">
+          BillFast
+        </span>
+        <span class="border-l-2  spanes border-solid border-slate-700 px-1 mb-0 align-text-bottom pb-0">
+          Lite
+        </span>
+      </div>
+    </div>
     </a>
-     <!--Settings-->
-    <a routerLink="../setting-page">
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        <i class="fa-solid fa-gear"></i>
+
+  <div class="menu w-full  justify-self-auto self-center  ">
+    <ul class=" p-2 space-y-10 items-center">
+      <li class=" text-lime-600 bg-slate-100 rounded-lg drop-shadow">
+        <a routerLink="">
+          <div class="flex items-center space-x-4 align-text-bottom p-2">
+            <img src="../../../assets/img/bar-chart.png" class="w-6 h-6">
+            <span class="text-lg text-end mt-2">Dashboard</span>
+          </div>
+        </a>
       </li>
-    </a>
-    </ul>
-  
-    <ul class="grid grid-rows-6 hidden p-2 gap-5 place-items-start text-xl NavItems"  [class.active]="showNavItems">
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 h-18 p-3 hover:scale-105 ease-in-out duration-300">
-          Menu
+      <li class="">
+        <a routerLink="../bill-page">
+          <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
+          rounded-lg ">
+            <img src="../../../assets/img/money.png" class="w-6 h-6">
+            <span class="text-lg text-end mt-1">Sales</span>
+          </div>
+        </a>
       </li>
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        Perfil
+      <li class="">
+        <a routerLink="../product-page">
+          <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
+          rounded-lg ">
+          <img src="../../../assets/img/box.png" class="w-6 h-6">
+          <span class="text-lg text-end mt-1">Products</span>
+          </div>
+        </a>
       </li>
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        Productos
+      <li class="">
+        <a routerLink="../client-page">
+          <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
+          rounded-lg ">
+          <img src="../../../assets/img/target.png" class="w-6 h-6">
+          <span class="text-lg text-end ">Clients</span>
+          </div>
+        </a>
       </li>
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        Facturas
-      </li>
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        Opciones
-      </li>
-      <li class="flex flex-col items-center rounded-md shadow-sm w-14 p-4 hover:scale-105 ease-in-out duration-300">
-        Ajustes
+      <li class="">
+        <a href="">
+          <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
+          rounded-lg ">
+          <img src="../../../assets/img/cashier-machine.png" class="w-6 h-6">
+          <span class="text-lg text-end ">Cashier</span>
+          </div>
+        </a>
       </li>
     </ul>
   </div>
+</div>
   
