--- a/src/app/pages/add-client-page/add-client-page.component.html
+++ b/src/app/pages/add-client-page/add-client-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex">
+<div class="flex containeres">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full text-xs">
         <p class="m-2 ml-5 text-lg font-bold">Clientes <span> > </span> Agregar</p>
@@ -72,11 +72,13 @@
 
             <div class="flex">
                 <div class="">
-                    <a routerLink="">
+                    <a routerLink="../client-page">
                     <button class=" mt-3 bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Volver</button>
                     </a>
                     
+                    <a routerLink="../client-page">
                     <button type="submit" class=" ml-3 mt-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" (click)="onClienteAgregado()">Agregar cliente</button>
+                    </a>
                     
                 </div>
             </div>
