Voy a trabajar en la categoria en el search bar

--- a/src/app/components/client-table/client-table.component.html
+++ b/src/app/components/client-table/client-table.component.html
@@ -1,4 +1,4 @@
-<div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-lime-600/30 rounded-lg relative">
+<div class="m-5 my-5 ml-0 p-2 px-4 bg-[#fff] shadow-md shadow-lime-600/30 rounded-lg relative">
     Datos de los clientes
     <table class="w-full my-3" style="text-align:justify;">
         <thead>
