--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,9 +1,9 @@
-<div class="flex justify-between items-center h-12  mx-5 bg-lime-600 shadow-lg rounded-lg relative">
+<div class="flex justify-between items-center h-12  mx-5 ml-0 bg-lime-600 shadow-lg rounded-lg relative">
     <!--Boton agregar-->
     <a [routerLink]="direccion">
-    <button class="bg-white shadow-md rounded-lg py-2 px-6 m-3 h-8 w-32 hover:scale-105 ease-in-out duration-300 flex items-center justify-between">
-        <span class="font-bold text-1xl">+</span>
-        <p class="font-bold text-sm"> Agregar</p> 
+    <button class="bg-white shadow-md rounded-lg py-2 px-6 m-3 h-8 w-32 hover:scale-105 ease-in-out duration-300 flex items-center justify-center">
+        <span class="font-bold text-md"><i class="fa-solid fa-plus"></i></span>
+        <p class="font-bold text-md px-4"> Add</p> 
     </button>
 </a>
     <!--Boton buscar-->
