--- a/src/app/pages/setting-page/setting-page.component.html
+++ b/src/app/pages/setting-page/setting-page.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-1/2 ml-10">
-        <p class="m-2 ml-5 text-lg font-bold">Configuración</p>
+        <p class="m-2 ml-5 text-xl font-bold">Configuración</p>
         <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
 
 
