--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -29,7 +29,7 @@
           <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
           rounded-lg ">
             <img src="../../../assets/img/money.png" class="w-6 h-6">
-            <span class="text-lg text-end mt-1">Sales</span>
+            <span class="text-lg text-end mt-1">Bills</span>
           </div>
         </a>
       </li>
@@ -38,7 +38,7 @@
           <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
           rounded-lg ">
           <img src="../../../assets/img/box.png" class="w-6 h-6">
-          <span class="text-lg text-end mt-1">Products</span>
+          <span class="text-lg text-end mt-1">Inventory</span>
           </div>
         </a>
       </li>
