--- a/src/app/pages/add-client-page/add-client-page.component.html
+++ b/src/app/pages/add-client-page/add-client-page.component.html
@@ -1,9 +1,9 @@
 <div class="flex containeres">
     <app-side-nav></app-side-nav>
-    <div class="flex flex-col w-full text-xs">
+    <div class="flex flex-col w-full text-xs relative">
         <p class="m-2 ml-5 text-lg font-bold">Clientes <span> > </span> Agregar</p>
     
-        <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-[#0EA5E9]/30 rounded-lg">
+        <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-lime-600/30 rounded-lg">
             <form>
                 <div class="flex justify-start">
                 <div class="mt-3">
