--- a/src/app/pages/bill-page/bill-page.component.html
+++ b/src/app/pages/bill-page/bill-page.component.html
@@ -1,7 +1,7 @@
 <div class="flex containeres">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
-        <p class="m-2 ml-5 text-lg font-bold">Facturas</p>
+        <p class="m-2 ml-0 text-xl font-bold">Bills</p>
         <app-search-bar
         [direccion]="ruta"
         ></app-search-bar>
