--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;300;500;600;700&display=swap');
+
+*{
+    font-family: 'League Spartan', sans-serif;
+}
