--- a/src/app/pages/client-page/client-page.component.html
+++ b/src/app/pages/client-page/client-page.component.html
@@ -1,7 +1,7 @@
 <div class="flex containeres">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
-        <p class="m-2 ml-0 text-xl font-bold">Clients</p>
+        <p class="m-2 ml-0 text-3xl font-medium drop-shadow-lg my-6 ">Clients</p>
         <app-search-bar
         [direccion]="ruta"
         ></app-search-bar>
