--- a/src/app/pages/add-product-page/add-product-page.component.html
+++ b/src/app/pages/add-product-page/add-product-page.component.html
@@ -1,8 +1,8 @@
 <div class="flex containeres">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full text-xs">
-        <p class="m-2 ml-5 text-lg font-bold">Productos <span> > </span> Agregar</p>
-        <div class="m-5 my-5 p-2 px-4 bg-[#fff] shadow-md shadow-lime-600/30 rounded-lg relative">
+        <p class="m-2 ml-5 text-3xl my-6 font-medium drop-shadow-lg">Add <span> > </span> New Product</p>
+        <div class="mx-5 p-2 px-4 bg-[#fff] shadow-md shadow-lime-500/30 rounded-lg relative">
             
             <div class="flex justify-start">
                 <div class="mt-3">
