--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -1,7 +1,7 @@
 <div class="flex containeres">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
-        <p class="m-2 ml-0 text-xl font-bold">Inventory</p>
+        <p class="m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Inventory</p>
         <app-search-bar
         [direccion]="ruta"
         ></app-search-bar>
