Integracion del dashboard y productos del proyecto de german completada

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
         <div class="titles flex spacing relative justify-center px-12">
           <h1 class="text-3xl font-medium drop-shadow-lg">Dashboard</h1>
           <div class="w-10 h-10 rounded-full shadow-md bg-slate-200 p-2">
-            <img src="../../../assets/user.png" alt="" />
+            <img src="../../../assets/img/user.png" alt="" />
           </div>
         </div>
   
