--- a/src/app/pages/client-page/client-page.component.scss
+++ b/src/app/pages/client-page/client-page.component.scss
@@ -17,3 +17,23 @@
   justify-content: space-between;
   
 }
+.modal::backdrop{
+  // backdrop-filter: blur(200px);
+  // background: linear-gradient(45deg, black,#365314);
+  // opacity: .6;
+
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  
+}
+// .modal::backdrop{
+//    backdrop-filter: blur(200px);
+//   background-color: black;
+//   opacity: .6;
+
+// }
+
+.modal{
+  -webkit-box-shadow: 5px 5px 22px 3px rgba(0,0,0,0.63); 
+box-shadow: 5px 5px 22px 3px rgba(0,0,0,0.63);
+}
