--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,71 +1,79 @@
-<div class="flex containeres">
-    <app-side-nav></app-side-nav>
-    <div class="containeres relative w-full min-h-screen p-8 text-slate-700">
-      <div class="flex-col w-full">
-        <div class="titles flex spacing relative justify-center px-12">
-          <h1 class="text-3xl font-medium drop-shadow-lg">Dashboard</h1>
-          <div class="w-10 h-10 rounded-full shadow-md bg-slate-200 p-2">
-            <img src="../../../assets/img/user.png" alt="" />
-          </div>
+<div class="flex">
+  <app-side-nav></app-side-nav>
+  <div class="containeres relative w-full min-h-screen p-8 text-slate-700">
+    <div class="flex-col w-full">
+      <div class="titles flex spacing relative justify-center px-12">
+        <h1 class="text-4xl font-medium drop-shadow-lg">Dashboard</h1>
+        <div class="w-10 h-10 rounded-full shadow-md bg-slate-200 p-2">
+          <img src="../../../assets/img/user.png" alt="" />
         </div>
-  
-        <div class="flex justify-evenly ... w-full ">
-          <div class="pt-8 w-2/5">
-            <div
-              class="card w-full h-56 bg-slate-100 shadow-md relative rounded-lg p-6"
-            >
-              <p class="text-2xl font-semibold drop-shadow-lg">Overview</p>
-              <div class="mt-1">
-                <p class="text-md font-normal">Ganancias</p>
-                <div class="w-5/6 bg-lime-500 h-2 rounded-lg"></div>
-              </div>
-              <div class="mt-3">
-                <p class="text-md font-normal">Gastos</p>
-                <div class="w-1/5 bg-red-500 h-2 rounded-lg"></div>
-              </div>
-              <div class="mt-3">
-                <p class="text-md font-normal">Neto</p>
-                <div class="w-3/5 bg-cyan-400 h-2 rounded-lg"></div>
-              </div>
+      </div>
+
+      <div class="flex flex-auto justify-evenly ... w-full h-[75vh]">
+        <div class="pt-8 w-2/5 h-full flex flex-col justify-around">
+          <div
+            class="card w-full h-[30vh] bg-slate-100 shadow-md relative rounded-lg p-6"
+          >
+            <p class="text-2xl font-semibold drop-shadow-lg">Overview</p>
+            <div class="mt-1">
+              <p class="text-md font-normal">Ganancias</p>
+              <div class="w-5/6 bg-lime-500 h-2 rounded-lg"></div>
             </div>
-            <div class="card w-full h-56 bg-slate-100 shadow-md relative rounded-lg p-6 mt-7">
-              <canvas id="canvas" width="100px" height="100px">
+            <div class="mt-3">
+              <p class="text-md font-normal">Gastos</p>
+              <div class="w-1/5 bg-red-500 h-2 rounded-lg"></div>
+            </div>
+            <div class="mt-3">
+              <p class="text-md font-normal">Neto</p>
+              <div class="w-3/5 bg-cyan-400 h-2 rounded-lg"></div>
+            </div>
+          </div>
+          <div class="card w-full  bg-slate-100 shadow-md relative rounded-lg p-6 h-[30vh]">
+            <div class="relative">
+              <canvas id="canvas" >
                 {{chart}}
               </canvas>
             </div>
           </div>
-          <div class="pt-8 w-2/5">
-            <div
-              class="card  h-56 bg-slate-100 shadow-md relative rounded-lg p-6"
-            >
-              <p class="text-2xl font-semibold drop-shadow-lg">Facturas</p>
-              <div class="flex space-x-20 mt-4">
-                <div class="">
-                  <p class="text-md font-normal text-lime-500 drop-shadow-md">
-                    Hechas
-                  </p>
-                  <p class="text-5xl mt-3 font-semibold">278</p>
-                </div>
-                <div class="">
-                  <p class="text-md font-normal text-red-500 drop-shadow-md">
-                    Cobradas
-                  </p>
-                  <p class="text-5xl mt-3 font-semibold">278</p>
-                </div>
-                <div class="">
-                  <p class="text-md font-normal text-cyan-400 drop-shadow-md">
-                    Sin pagar
-                  </p>
-                  <p class="text-5xl mt-3 font-semibold">278</p>
-                </div>
+        </div>
+        <div class="pt-8 w-2/5 flex flex-col justify-around">
+          <div
+            class="card  h-[30vh] bg-slate-100 shadow-md relative rounded-lg p-6"
+          >
+            <p class="text-2xl font-semibold drop-shadow-lg">Facturas</p>
+            <div class="flex space-x-20 mt-4">
+              <div class="">
+                <p class="text-md font-normal text-lime-500 drop-shadow-md">
+                  Hechas
+                </p>
+                <p class="text-5xl mt-3 font-semibold">278</p>
               </div>
-              <p class="text-sm font-normal mt-2 text-gray-400">
-                Ultima actualizacion hace 5s...
-              </p>
+              <div class="">
+                <p class="text-md font-normal text-red-500 drop-shadow-md">
+                  Cobradas
+                </p>
+                <p class="text-5xl mt-3 font-semibold">278</p>
+              </div>
+              <div class="">
+                <p class="text-md font-normal text-cyan-400 drop-shadow-md">
+                  Sin pagar
+                </p>
+                <p class="text-5xl mt-3 font-semibold">278</p>
+              </div>
+            </div>
+            <p class="text-sm font-normal mt-2 text-gray-400">
+              Ultima actualizacion hace 5s...
+            </p>
+          </div>
+          <div class="card w-full  bg-slate-100 shadow-md relative rounded-lg p-6 h-[30vh]">
+            <div class="relative">
+              <canvas id="canvasito" >
+                {{chart}}
+              </canvas>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
