--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -15,35 +15,35 @@
         <p class="text-xl text-center">Agregar Producto</p>
         <form action="" method="dialog" class=" grid grid-cols-2 grid-rows-4 gap-14 h-4/6 ">
           <div class="flex flex-col ">
-            <label for="">Nombre: </label>
+            <label for="">Id: </label>
+            <input type="number" class="rounded-lg bg-stone-200 shadow-sm" [disabled]="true">
+          </div>
+          <div class="flex flex-col ">
+            <label for="">Imagen: </label>
+            <input type="URL" class="rounded-lg bg-stone-200 shadow-sm">
+          </div>
+          <div class="flex flex-col ">
+            <label for="">Nombre del producto: </label>
             <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
           </div>
           <div class="flex flex-col ">
-            <label for="">Nombre: </label>
+            <label for="">Categoria: </label>
             <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
           </div>
           <div class="flex flex-col ">
-            <label for="">Nombre: </label>
+            <label for="">Precio de compra: </label>
             <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
           </div>
           <div class="flex flex-col ">
-            <label for="">Nombre: </label>
+            <label for="">Precio de venta: </label>
             <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
           </div>
           <div class="flex flex-col ">
-            <label for="">Nombre: </label>
+            <label for="">Descripcion producto: </label>
             <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
           </div>
           <div class="flex flex-col ">
-            <label for="">Nombre: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Nombre: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Nombre: </label>
+            <label for="">Ganancia: </label>
             <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
           </div>
           <button type="submit" class="mt-3 bg-lime-600 flex items-center justify-center h-8  p-4 rounded-xl shadow-lg ">Submit</button>
