--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="relative scroll-pl-6 grid grid-cols-5 gap-12 p-10 overflow-y-scroll   max-h-[70vh] ">
+<div class="relative  grid grid-cols-5 gap-4 p-10 overflow-y-scroll   max-h-[70vh] ">
     <app-product
       [product]="product"
       *ngFor="let product of chooseProducts()"
