--- a/src/app/pages/bill-page/bill-page.component.html
+++ b/src/app/pages/bill-page/bill-page.component.html
@@ -1,105 +1,214 @@
 <div class="flex containeres">
-    <app-side-nav></app-side-nav>
-    <div class="flex flex-col w-full ml-10">
-        <p class="m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Bills</p>
-        <app-search-bar
-        (enviarProductoABuscar)="buscarProducto($event)"
-        ></app-search-bar>
-        <app-products [productFilter]="info"></app-products>
-    </div>
-    <div class="w-2/5 h-min-screen bg-gray-100 relative flex flex-col  py-5">
-        <div class="w-full h-1/6 flex flex-col justify-evenly pl-4">  
-            
-                <div class="flex">
-                    <label class="toggler-wrapper style-1">
-                        <input type="checkbox" >
-                        <div class="toggler-slider">
-                          <div class="toggler-knob"></div>
-                        </div>
-                      </label>
-                      <label for="" class="ml-2 text-lg leading-tight ">Cliente</label>
-                </div>
-                <div class="flex">
-                    <label class="toggler-wrapper style-1">
-                        <input type="checkbox" >
-                        <div class="toggler-slider">
-                          <div class="toggler-knob"></div>
-                        </div>
-                      </label>
-                      <label for="" class="ml-2 text-lg leading-tight ">Credito</label>
-                </div>
-            
-            <div class="flex">
-                <label class="toggler-wrapper style-1">
-                    <input type="checkbox" >
-                    <div class="toggler-slider">
-                      <div class="toggler-knob"></div>
-                    </div>
-                  </label>
-                  <label for="" class="ml-2 text-lg leading-tight ">Descuento</label>
+  <app-side-nav></app-side-nav>
+  <div class="flex flex-col w-full ml-10">
+    <p class="m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Bills</p>
+    <app-search-bar
+      (enviarProductoABuscar)="buscarProducto($event)"
+    ></app-search-bar>
+    <app-products [productFilter]="info"></app-products>
+  </div>
+  <div
+    class="w-2/5 min-h-screen relative flex flex-col bg-white text-gray-700 drop-shadow-lg"
+  >
+    <div class="w-full h-1/4 pt-2">
+      <div class="w-full h-1/3 flex justify-evenly">
+        <div class="flex flex-col items-center">
+          <label class="toggler-wrapper style-1"> 
+            <input type="checkbox" class=""  #nameInput="ngModel" [(ngModel)]="textboxes"  />
+            <div class="toggler-slider">
+              <div class="toggler-knob"></div>
             </div>
-           
+          </label>
+          <label for="" class="font-semibold leading-tight">Cliente</label>
         </div>
-        <div class=" w-full h-1/2  bg-neutral-100 p-5 flex flex-col justify-between">
-            <div class="w-full h-72 flex flex-col justify-evenly">
-                <div class="flex justify-between">
-                    <div class="flex justify-between w-1/6">
-                        <p>-</p>
-                        <p>1 </p>
-                    </div>
-                    <p>Pollo con platano maduro </p>
-                </div>
-                <div class="flex justify-between">
-                    <div class="flex justify-between w-1/6">
-                        <p>-</p>
-                        <p>1 </p>
-                    </div>
-                    <p>Pollo con platano maduro </p>
-                </div>
-                <div class="flex justify-between">
-                    <div class="flex justify-between w-1/6">
-                        <p>-</p>
-                        <p>1 </p>
-                    </div>
-                    <p>Pollo con platano maduro </p>
-                </div>
-                <div class="flex justify-between">
-                    <div class="flex justify-between w-1/6">
-                        <p>-</p>
-                        <p>1 </p>
-                    </div>
-                    <p>Pollo con platano maduro </p>
-                </div>
-                <div class="flex justify-between">
-                    <div class="flex justify-between w-1/6">
-                        <p>-</p>
-                        <p>1 </p>
-                    </div>
-                    <p>Pollo con platano maduro </p>
-                </div>
+        <div class="flex flex-col items-center">
+          <label class="toggler-wrapper style-1">
+            <input type="checkbox" />
+            <div class="toggler-slider">
+              <div class="toggler-knob"></div>
             </div>
-            <div class="w-full  border-t-5 border-t border-slate-900">
-                <div class="flex w-full justify-between">
-                    <p>subtotal:</p>
-                    <p>$490</p>
-                </div>
-                <div class="flex w-full justify-between">
-                    <p>itbis:</p>
-                    <p>$10</p>
-                </div>
-                <div class="flex w-full justify-between">
-                    <p>total:</p>
-                    <p>$500</p>
-                </div>
-            </div>
+          </label>
+          <label for="" class="font-semibold leading-tight">Credito</label>
         </div>
-        <div class=" w-full p-5 flex flex-col items-center">
-            <div class=" w-full flex justify-around px-3">
 
-                <button type="submit" class="mt-3 bg-lime-600 flex items-center justify-center h-8  p-6 rounded-sm shadow-lg ">Efectivo</button>
-                <button type="submit" class="mt-3 bg-amber-400 flex items-center justify-center h-8  p-6 rounded-sm shadow-lg ">Tarjeta</button>
+        <div class="flex flex-col items-center">
+          <label class="toggler-wrapper style-1">
+            <input type="checkbox" />
+            <div class="toggler-slider">
+              <div class="toggler-knob"></div>
             </div>
-            <button type="submit" class="mt-3 bg-cyan-400 flex items-center justify-center h-8  p-6 rounded-sm shadow-lg ">Transferencia</button>
+          </label>
+          <label for="" class="font-semibold leading-tight">Descuento</label>
         </div>
+      </div>
+      <div class="w-full flex flex-col h-4/5  ">
+        <div class="flex items-center justify-center h-full textboxes" [class.active]="nameInput.invalid">
+          <label for="">RNC: </label>
+          <input
+            type="text"
+            name=""
+            id=""
+            class="ml-3 mt-1 shadow-lg rounded-sm bg-stone-200"
+          />
+        </div>
+        <div class="flex items-center justify-center h-full">
+            <label for="">RNC: </label>
+            <input
+              type="text"
+              name=""
+              id=""
+              class="ml-3 shadow-lg rounded-sm bg-stone-200"
+            />
+          </div>
+          <div class="flex items-center justify-center h-full">
+            <label for="">RNC: </label>
+            <input
+              type="text"
+              name=""
+              id=""
+              class="ml-3 shadow-lg rounded-sm bg-stone-200"
+            />
+          </div>
+      </div>
     </div>
+    <div class="w-full h-4/5 flex flex-col justify-around">
+        <div>
+            <p class="text-base font-semibold mt-2 ml-2">Lista de productos:</p>
+           
+            <ul class="w-full h-[35vh] flex flex-col p-5 overflow-y-scroll text-sm">
+              <li class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </li>
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+              <div class="flex justify-between m-2">
+                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
+                <p>1</p>
+                <p>Pollo con platano maduro</p>
+              </div>
+             
+        </ul>
+        
+      </div>
+      <div class="w-full bg-stone-200">
+        <div
+          class="flex w-full justify-between border-t border-slate-900 px-2 py-1"
+        >
+          <p>subtotal:</p>
+          <p>$490</p>
+        </div>
+        <div
+          class="flex w-full justify-between border-t border-slate-900 px-2 py-1"
+        >
+          <p>itbis:</p>
+          <p>$10</p>
+        </div>
+        <div
+          class="bg-lime-600 text-white flex w-full text-2xl justify-between border-t border-slate-900 p-2"
+        >
+          <p>total:</p>
+          <p>$500</p>
+        </div>
+      </div>
+    </div>
+    <div class="w-full h-1/6 p-2 flex items-center justify-evenly font-semibold">
+      <button
+        type="submit"
+        class="bg-lime-600 font-semibold  flex items-center justify-center px-4 py-3 rounded-sm shadow-xl
+        hover:scale-105 ease-in-out duration-300"
+      >
+        Efectivo
+      </button>
+      <button
+        type="submit"
+        class="bg-amber-400 font-semibold  flex items-center justify-center px-4 py-3 rounded-sm shadow-xl 
+        hover:scale-105 ease-in-out duration-300"
+      >
+        Tarjeta
+      </button>
+      <button
+        type="submit"
+        class="bg-cyan-400 font-semibold  flex items-center justify-center px-4 py-3 rounded-sm shadow-lg tr hover:scale-105 ease-in-out duration-300"
+      >
+        Transferencia
+      </button>
+    </div>
+  </div>
 </div>
