ya funciona el tooltip

--- a/src/app/pages/product-page/product-page.component.scss
+++ b/src/app/pages/product-page/product-page.component.scss
@@ -40,3 +40,7 @@
   -webkit-box-shadow: 5px 5px 22px 3px rgba(0,0,0,0.63); 
 box-shadow: 5px 5px 22px 3px rgba(0,0,0,0.63);
 }
+#cover {
+  height: 100%;
+  width: 100%;
+}
