--- a/src/app/pages/client-page/client-page.component.html
+++ b/src/app/pages/client-page/client-page.component.html
@@ -9,8 +9,8 @@
           <!--Modal agregar productos-->
       <dialog #modal id="modal" class="modal 2xl:w-3/5 bg-gray-100 open:flex relative flex-col items-center justify-between rounded-xl pt-0">
         <p class="xl:text-xl 2xl:text-2xl font-bold text-center 2xl:m-9 xl:m-6">Agregar cliente</p>
-        <form action="" method="dialog">
-            <div  class=" flex flex-col  2xl:gap-6 xl:gap-2 h-1/2 ">
+        <form action="" method="dialog" class="w-5/6">
+            <div  class=" flex flex-col w-full 2xl:gap-6 xl:gap-2 h-1/2">
 
               <div class="flex"> 
                 <div class="w-1/3 2xl:mb-2 px-3 xl:mb-0">
@@ -50,7 +50,7 @@
                   <div class="flex flex-col xl:mb-0w-full">
 
                     <div class="flex items-center 2xl:mb-2 pl-3">
-                      <input id="default-checkbox" type="checkbox" value="" class="xl:text-sm xl:h-9 w-4  h-4 bg-lime-500  rounded border-lime-300 focus:border-lime-500 dark:focus:to-lime-300 dark:border-b-lime-500 focus:ring-2 dark:border-lime-600">
+                      <input id="default-checkbox" type="checkbox" value="" class="xl:text-sm xl:h-9 w-4  h-4 bg-lime-500  rounded border-lime-300 focus:border-lime-500 dark:focus:to-lime-300 dark:border-b-lime-500 dark:border-lime-600">
                       <label for="default-checkbox" class="ml-2 block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">Comprobante fiscal</label>
                     </div>
   
