--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -80,19 +80,14 @@
               for="grid-first-name"
             >
               Cantidad:
-              <i
-                data-tooltip-target="tooltip-default"
-                class="fa-solid fa-circle-info relative"
+                <i
+                title="Inserte la cantidad que desea añadir al inventario"
+                class="fa-solid fa-circle-info relative cursor-help"
                 style="color: orange"
               ></i>
-              <div
-                id="tooltip-default"
-                role="tooltip"
-                class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700"
-              >
-                Ingrese la cantidad que va a almacenar en el inventario
-                <div class="tooltip-arrow" data-popper-arrow></div>
-              </div>
+              
+          
+              
             </label>
             <input
               class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight outline-none focus:bg-white focus:border-lime-500"
@@ -145,31 +140,28 @@
           </div>
         </div>
         <div class="flex items-center">
-          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-2 rounded">
+          <div class="w-1/2 2xl:mb-2 xl:mb-0 px-3 mb-2 rounded">
             <form #formulario="ngForm">
               <label
-              class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+              class="justify-center block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
               for="grid-first-name xl:text-sm"
             >
               Seleccione una imagen
             </label>
-              <input
-                (change)="capturarFile($event)"
-                class="block w-1/2 text-sm text-black-900 bg-gray-50 rounded-lg border border-gray-300 cursor-pointer dark:text-black focus:outline-none dark:bg-white dark:border-lime-500 dark:placeholder-gray-400"
-                aria-describedby="file_input_help"
-                id="file_input"
-                type="file"
-              />
-              <p
-                class="mt-1 text-sm text-gray-500 dark:text-gray-300"
-                id="file_input_help"
-              >
-                SVG, PNG, JPG or GIF (MAX. 800x400px).
-              </p>
-              <div *ngIf="previsualizacion">
-                <img width="100px" [src]="previsualizacion" alt="" />
-              </div>
-            </form>
+            <div class="flex w-full justify-center">
+              
+              <label for="dropzone-file" class="flex flex-col justify-center items-center w-full h-32 rounded-lg border border-gray-300 cursor-pointer dark:hover:bg-bray-800 dark:bg-gray-200 hover:bg-gray-100 dark:border-gray-200 dark:hover:border-lime-500 dark:hover:bg-gray-50">
+                  <div class="flex flex-col justify-center items-center pt-5 pb-6 position: relative">
+                    
+                      <svg class="mb-3 w-10 h-10 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path></svg>
+                      <p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Click to upload</span> or drag and drop</p>
+                      <p class="text-xs text-gray-500 dark:text-gray-400">JPG or JPEG just permited</p>
+                      <img [src]="previsualizacion" alt="" class="position: absolute">
+                  </div>
+                  <input id="dropzone-file" type="file" class="hidden" (change)="capturarFile($event)"/>
+              </label>
+          </div> 
+            </form>  
           </div>
 
           <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
@@ -180,7 +172,7 @@
               Descripcion del producto:
             </label>
             <textarea
-              class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
+              class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-0 h-32 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
               id="grid-first-name"
               type="tel"
               placeholder=""
@@ -192,9 +184,9 @@
         <button
           type="submit"
           class="mt-5 bg-lime-600 flex items-center justify-center 2xl:h-12 xl:h-10 w-1/4 p-4 rounded-xl shadow-lg hover:bg-lime-700 text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300"
-          (click)="subirArchivo()"
+          (click)="subirArchivo()" [disabled]="loading"
         >
-          Submit
+          {{(loading) ? 'Loading...' : 'Submit'}}
         </button>
         <button
           (click)="closeModal()"
