--- a/src/app/pages/bill-page/bill-page.component.html
+++ b/src/app/pages/bill-page/bill-page.component.html
@@ -5,7 +5,7 @@
     <app-search-bar
       (enviarProductoABuscar)="buscarProducto($event)"
     ></app-search-bar>
-    <app-products [productFilter]="info"></app-products>
+    <app-products [productFilter]="info" (addedListProduct)="onShowDetail($event)"></app-products>
   </div>
   <div
     class="w-2/5 min-h-screen relative flex flex-col bg-white text-gray-700 drop-shadow-lg"
@@ -14,7 +14,9 @@
       <div class="w-full h-1/3 flex justify-evenly">
         <div class="flex flex-col items-center">
           <label class="toggler-wrapper style-1"> 
-            <input type="checkbox" class=""  #nameInput="ngModel" [(ngModel)]="textboxes"  />
+            <!-- <input type="checkbox" class=""  #nameInput="ngModel" [(ngModel)]="textboxes"  /> -->
+             <input type="checkbox" required #nameInput="ngModel" [(ngModel)]="option.one" />
+            
             <div class="toggler-slider">
               <div class="toggler-knob"></div>
             </div>
@@ -23,7 +25,7 @@
         </div>
         <div class="flex flex-col items-center">
           <label class="toggler-wrapper style-1">
-            <input type="checkbox" />
+            <input type="checkbox" required #nameInput2="ngModel" [(ngModel)]="option.two" />
             <div class="toggler-slider">
               <div class="toggler-knob"></div>
             </div>
@@ -33,7 +35,7 @@
 
         <div class="flex flex-col items-center">
           <label class="toggler-wrapper style-1">
-            <input type="checkbox" />
+            <input type="checkbox" required #nameInput3="ngModel" [(ngModel)]="option.three" />
             <div class="toggler-slider">
               <div class="toggler-knob"></div>
             </div>
@@ -41,32 +43,32 @@
           <label for="" class="font-semibold leading-tight">Descuento</label>
         </div>
       </div>
-      <div class="w-full flex flex-col h-4/5  ">
-        <div class="flex items-center justify-center h-full textboxes" [class.active]="nameInput.invalid">
+      <div class="w-full flex flex-col h-4/5  pr-5">
+        <div class="flex items-center justify-end h-full textboxes" [class.invalid]="nameInput.invalid">
           <label for="">RNC: </label>
           <input
             type="text"
             name=""
             id=""
-            class="ml-3 mt-1 shadow-lg rounded-sm bg-stone-200"
+            class="ml-3 mt-1 shadow-md rounded-sm bg-stone-200"
           />
         </div>
-        <div class="flex items-center justify-center h-full">
-            <label for="">RNC: </label>
+        <div class="flex items-center justify-end h-full textboxes" [class.invalid]="nameInput2.invalid">
+            <label for="">Credito: </label>
             <input
               type="text"
               name=""
               id=""
-              class="ml-3 shadow-lg rounded-sm bg-stone-200"
+              class="ml-3 shadow-md rounded-sm bg-stone-200"
             />
           </div>
-          <div class="flex items-center justify-center h-full">
-            <label for="">RNC: </label>
+          <div class="flex items-center justify-end h-full textboxes" [class.invalid]="nameInput3.invalid">
+            <label for="">Descuento: </label>
             <input
               type="text"
               name=""
               id=""
-              class="ml-3 shadow-lg rounded-sm bg-stone-200"
+              class="ml-3 shadow-md rounded-sm bg-stone-200"
             />
           </div>
       </div>
@@ -76,93 +78,17 @@
             <p class="text-base font-semibold mt-2 ml-2">Lista de productos:</p>
            
             <ul class="w-full h-[35vh] flex flex-col p-5 overflow-y-scroll text-sm">
+              <li *ngFor="let products of product">
+                {{ product.title }}
+                {{ product.price}}
+              </li>
+
               <li class="flex justify-between m-2">
                 <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
+                <p >{{ product.title }}</p>
+                <h2>{{ product.price | currency: "" }}</h2>
               </li>
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
-             
-              <div class="flex justify-between m-2">
-                <img src="../../../assets/img/bin.png" class="w-4 h-4 hover:scale-110 ease-in-out duration-300" alt="" />
-                <p>1</p>
-                <p>Pollo con platano maduro</p>
-              </div>
+              
              
         </ul>
         
@@ -191,21 +117,21 @@
     <div class="w-full h-1/6 p-2 flex items-center justify-evenly font-semibold">
       <button
         type="submit"
-        class="bg-lime-600 font-semibold  flex items-center justify-center px-4 py-3 rounded-sm shadow-xl
+        class="bg-lime-600 font-semibold  flex items-center justify-center px-[1.2vw] py-[1.5vh] rounded-sm shadow-xl
         hover:scale-105 ease-in-out duration-300"
       >
         Efectivo
       </button>
       <button
         type="submit"
-        class="bg-amber-400 font-semibold  flex items-center justify-center px-4 py-3 rounded-sm shadow-xl 
+        class="bg-amber-400 font-semibold  flex items-center justify-center px-[1.4vw] py-[1.5vh] rounded-sm shadow-xl 
         hover:scale-105 ease-in-out duration-300"
       >
         Tarjeta
       </button>
       <button
         type="submit"
-        class="bg-cyan-400 font-semibold  flex items-center justify-center px-4 py-3 rounded-sm shadow-lg tr hover:scale-105 ease-in-out duration-300"
+        class="bg-cyan-400 font-semibold  flex items-center justify-center px-[1vw] py-[1.5vh] rounded-sm shadow-lg tr hover:scale-105 ease-in-out duration-300"
       >
         Transferencia
       </button>
